# templete_fortran-app

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  macros.fypp  main.fypp  sample_module.fypp
